k8s/dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
  labels:
    app: backend
    environment: dev
spec:
  type: ClusterIP
  selector:
    app: backend
    environment: dev
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
