k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dev
  labels:
    app: frontend
    environment: dev
spec:
  type: ClusterIP
  selector:
    app: frontend
    environment: dev
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
